# Kubernetes-Mcp

./: .env  .env.example  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  dependencies.py  server.py
clients/: __init__.py  base_k8s_client.py  jaeger_client.py  neo4j_client.py  prometheus_client.py  shell_client.py
k8s_observability_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/: __init__.py  logs_service.py  metrics_service.py  shell_service.py  topology_service.py  trace_service.py
tests/: smoke_test.py
tools/: __init__.py  logs.py  metrics.py  shell.py  topology.py  traces.py
